# kamatera-rke2-controller

./: .dockerignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  go.mod
.github/workflows/: ci.yaml
cmd/controller/: main.go
deploy/: deployment.yaml  kamatera-rke2-controller.yaml  rbac.yaml
docs/superpowers/plans/: 2026-07-06-shared-controller-snapshots.md
docs/superpowers/specs/: 2026-07-06-shared-controller-snapshots-design.md
internal/controller/: kamatera_api_client.go  kamatera_api_client_rest.go  kamatera_api_client_test.go  kamatera_request.go  kamatera_request_test.go  kamatera_servers_controller.go  kamatera_servers_controller_test.go  name_matcher.go  name_matcher_test.go  node_delete_controller.go  node_delete_controller_test.go  node_delete_poller.go  node_delete_poller_test.go  node_list_controller.go  node_list_controller_test.go  node_state_store.go  node_state_store_test.go  server_state_store.go  server_state_store_test.go  snapshot_logger.go  snapshot_logger_test.go
tests/: pyproject.toml
tests/tests/: test_controller.py
