[project]
name = "kamaterarke2c"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "kamatera-rke2-kubernetes-terraform-example-tests",
]

[tool.uv.sources]
kamatera-rke2-kubernetes-terraform-example-tests = { path = "../../kamatera-rke2-kubernetes-terraform-example/tests", editable = true }
